--- a/baitapgoogle.html
+++ b/baitapgoogle.html
@@ -27,7 +27,7 @@
                 <div style="padding-bottom: 20px;">
                     <p>Đây không phải máy tính của bạn? Hãy sử dụng chế độ Khách để đăng nhập một cách riêng tư. <a href="https://support.google.com/accounts/answer/2917834">Tìm hiểu thêm</a></p>
                 </div>
-                <div>
+                <div style="justify-content:space-between;width: 380px;">
                     <button style="background-color:white;color:#1a73e8;font-size:14px;border:none;"><b>Tạo tài khoản</b></button>
                     <button style="background-color:#1a73e8;color:white;font-size:14px;padding:5px 25px 5px 25px;">Tiếp theo</button> 
                 </div>
